fixed layout issue

--- a/app.scss
+++ b/app.scss
@@ -13,6 +13,8 @@ main {
     grid-template-columns: 0.8fr auto auto 1fr;
     grid-template-rows: 1fr 2fr 2fr 1fr;
     grid-gap: 15px;
+    height: 100vh;
+    width: 100vw;
 }
 
 .left-column {
@@ -54,6 +56,7 @@ main {
         .js-paragraph {
             padding-right: 40px;
             height: 66px;
+            cursor: pointer;
         }
 
         button {
